fix(waybar): better spacing

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -7,7 +7,7 @@
 
 window#waybar {
     background:  #382A20;
-    margin: 40px 40px;
+    margin: 60px 40px 20px 40px;
     color: #fcfcfa;
     border-radius: 8px;
 }
